# spbu-amcp-tasks

./: .gitignore  README.md  interesting sort.cpp  refactoring.cpp
cmake and google tests/: run.bat
cmake and google tests/project/: CMakeLists.txt
cmake and google tests/project/menu/: main.cpp  menu.cpp
cmake and google tests/project/sorting/: CMakeLists.txt  main.cpp
cmake and google tests/project/sorting/tests/: CMakeLists.txt  test.cpp
cmake_and_google_tests/project/: CMakeLists.txt
cmake_and_google_tests/project/menu/: CMakeLists.txt
cmake_and_google_tests/project/sorting/: CMakeLists.txt
long_numbers/: run.bat
long_numbers/project/: CMakeLists.txt  main.cpp
long_numbers/project/source/: CMakeLists.txt  long_number.cpp  long_number.hpp
long_numbers/project/test/: CMakeLists.txt  test_long_number.cpp
long_numbers/project/tests/: CMakeLists.txt
long_numbers/source/: CMakLists.txt  long_number.cpp  long_number.hpp
mario/: main.cpp
menu/: menu.hpp  menu_functions.cpp  menu_functions.hpp  menu_items.cpp  menu_items.hpp  menu_main.cpp
refactoring/: refactoring.cpp
small tasks/: linked list.cpp
small_tasks/: requests_on_segment.cpp
sorting - many files/: main.cpp  sortings.cpp
sorting_many_files/: io.cpp  io.hpp  sortings.hpp
vector_and_linked_list/: run.bat
vector_and_linked_list/project/: CMakeLists.txt
vector_and_linked_list/project/source/: CMakeLists.txt  linked_list.cpp  linked_list.hpp  vector.cpp  vector.hpp
vector_and_linked_list/project/test/: CMakeLists.txt  test_vector.cpp
(+11 files in other folders)
